Tag Judul dan Paragraf

--- a/index.html
+++ b/index.html
@@ -6,5 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Praktikum HTML</title>
   </head>
-  <body></body>
+  <body>
+    <h1>Profil Saya</h1>
+
+    <h2>Biografi Singkat</h2>
+
+    <p>
+      Saya adalah anak pertama dari 3 bersaudara. nama saya adalah Daffa. saya memiliki 1 adik perempuan dan yang 1 lagi laki-laki. saat ini saya sedang menempuh pendidikan di universitas pendidikan nasional denpasar saya adalah mahasiswa
+      aktif yang mempelajari ilmu komputer di Undiknas Denpasar.
+    </p>
+
+    <h2>Pendidikan</h2>
+
+    <p>Saat ini saya sedang menempuh semester keempat di jurusan Teknologi Informasi.</p>
+  </body>
 </html>
