membuat hyperlink dan gambar

--- a/index.html
+++ b/index.html
@@ -19,5 +19,14 @@
     <h2>Pendidikan</h2>
 
     <p>Saat ini saya sedang menempuh semester keempat di jurusan Teknologi Informasi.</p>
+
+    <h2>Kontak Saya</h2>
+    <p>Anda dapat menghubungi saya melalui email di <a href="daffaganteng@gmail.com">daffaganteng@gmail.com</a>.</p>
+
+    <h2>Tempat Yang ingin Saya Kunjungi</h2>
+    <p>Berikut ini adalah Tempat yang ingin saya kunjungi:</p>
+    <img src="https://asset-2.tstatic.net/tribunnews/foto/bank/images/suasana-di-ginza-malam-hari_20170703_150159.jpg" alt="Tokyo Jepang" />
+
+    <p>Untuk informasi lebih lanjut, kunjungi <a href="http://www.instagramsaya.com" target="_blank">sosial media saya</a>.</p>
   </body>
 </html>
