--- a/index.html
+++ b/index.html
@@ -28,5 +28,19 @@
     <img src="https://asset-2.tstatic.net/tribunnews/foto/bank/images/suasana-di-ginza-malam-hari_20170703_150159.jpg" alt="Tokyo Jepang" />
 
     <p>Untuk informasi lebih lanjut, kunjungi <a href="http://www.instagramsaya.com" target="_blank">sosial media saya</a>.</p>
+
+    <h2>Hobi Saya</h2>
+    <ul>
+      <li>Main Game</li>
+      <li>Bermain alat musik</li>
+      <li>bernyanyi</li>
+    </ul>
+
+    <h2>Riwayat Pendidikan</h2>
+    <ol>
+      <li>SD Negeri 2 sesetan denpasar</li>
+      <li>SMPK 1 HARAPAN Denpasar</li>
+      <li>SMAN 5 Denpasar</li>
+    </ol>
   </body>
 </html>
