--- a/index.html
+++ b/index.html
@@ -42,5 +42,28 @@
       <li>SMPK 1 HARAPAN Denpasar</li>
       <li>SMAN 5 Denpasar</li>
     </ol>
-  </body>
+
+<h2>Jadwal Kuliah Semester Ini</h2>
+<table border="1">
+    <tr>
+        <th>Hari</th>
+        <th>Mata Kuliah</th>
+        <th>Waktu</th>
+        <th>Dosen</th>
+    </tr>
+    <tr>
+        <td>Senin</td>
+        <td>Sistem Pakar</td>
+        <td>08:00 - 10:30</td>
+        <td>Adie Wahyudi Oktavia Gama</td>
+    </tr>
+    <tr>
+        <td>Selasa</td>
+        <td>Internet of things</td>
+        <td>09:55 - 12:55</td>
+        <td>I Wayan Aditya Suranata</td>
+    </tr>
+
+
+</body>
 </html>
