--- a/biodata.html
+++ b/biodata.html
@@ -8,10 +8,20 @@
   </head>
   <body>
     <h1>BIODATA SAYA</h1>
-    <h1>Daffa Ezrananda</h1>
-    <p>Nama saya Daffa Ezrananda Pratama. Saya adalah mahasiswa aktif Universitas Pendidikan Nasional Denpasar, Jurusan Teknologi Informasi</p>
+    <h1>Daffa Ezrananda Pratama</h1>
+    <p>Nama saya Daffa Ezrananda Pratama. Saya adalah mahasiswa aktif Universitas Pendidikan Nasional Denpasar, Jurusan Teknologi Informasi.</p>
+    <p>Usia: 19 Tahun</p>
+    <p>Tanggal Lahir: 09 April 2004</p>
+    <p>Alamat Tinggal: Jln.Raya Sesetan Gg.Ikan Kakap</p>
 
     <img src="Fotoku.jpg" alt="Foto Saya Ganteng" width="400" />
+
+    <h1>Minat dan hobi</h1>
+    <ul>
+      <li>Main Game</li>
+      <li>Bermain Alat Musik</li>
+      <li>Bernyanyi</li>
+    </ul>
 
     <h1>Social Media</h1>
     <a href="https://www.instagram.com/uttaaa04/"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSAaVpm5QFHwTQ_159JRTHF3zFK7Yg_P_92ADM1RixeWg&s" width="40" /><br />Instagram</a><br />
@@ -23,9 +33,24 @@
         <th>Tahun</th>
       </tr>
       <tr>
-        <td>Sarjana 1</td>
-        <td>Undiknas</td>
+        <td>KULIAH</td>
+        <td>UNDIKNAS</td>
         <td>2022</td>
+      </tr>
+      <tr>
+        <td>SMAN</td>
+        <td>SMAN 5</td>
+        <td>2019</td>
+      </tr>
+      <tr>
+        <td>SMP</td>
+        <td>SMPK 1 HARAPAN</td>
+        <td>2016</td>
+      </tr>
+      <tr>
+        <td>SD</td>
+        <td>SDN 2 SESETAN</td>
+        <td>2010</td>
       </tr>
     </table>
     <br />
